--- a/blog.html
+++ b/blog.html
@@ -75,94 +75,16 @@
             </div>
         </form>
         <article id=post></article>
+        
         <article class="post_full">
             <div class="post_head">
-                <h1 class="post_title">Dev Blog 7: This Page, This Project</h1>
+                <h1 class="post_title">Demo Post</h1>
                 <div class="post_details">
                     <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">11/14/2020</h3>
+                    <h3 class="post_date">1/27/1993</h3>
                 </div>
             </div>
-            <p class="post_content"> Post Coming Soon! It is missing site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
-
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Dev Blog 6: What's Next</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">10/30/2020</h3>
-                </div>
-            </div>
-            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned! 
-
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Dev Blog 5: Wrapping It All Together</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">10/12/2020</h3>
-                </div>
-            </div>
-            <p class="post_content">Post Coming Soon! It is missing during site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
-
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Dev Blog 4: JavaScript</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">9/20/2020</h3>
-                </div>
-            </div>
-            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
-
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Dev Blog 3: I Goofed..</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">9/3/2020</h3>
-                </div>
-            </div>
-            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
-
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Dev Blog 2: HTML and CSS</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">8/10/2020</h3>
-                </div>
-            </div>
-            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
-
-            </p>
-        </article>
-        <article class="post_full">
-            <div class="post_head">
-                <h1 class="post_title">Dev Blog 1: “Nurses Eat Their Young”...do Developers?</h1>
-                <div class="post_details">
-                    <h3 class="post_author">By: Jake St. Germain</h3>
-                    <h3 class="post_date">8/2/2020</h3>
-                </div>
-            </div>
-            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
-                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
+            <p class="post_content">Demo post! More to come.
 
             </p>
         </article>
