--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             decided to pursue a longtime goal of mine and learn how to code. I have always had a love for tech and shown an aptitude for
                             learning quickly in the tech area. My time in the ICU has helped me to remain calm, cool, and collected under pressure and,
                             ideally, I will start to contribute to the tech space soon! </strong></p>
-                        <p><strong> Random tidbits! Like the headline says, I am a cat enthusiast and have three of the fluffy jerks. I have built computers 
-                            for myself and a few of my friends, recently re-learned how to play the trombone, and love spending time on my 
+                        <p><strong> Random tidbits! Like the headline says, I am a cat enthusiast and have three of the fluffy nerds. I have built computers 
+                            for myself and a few of my friends, and love spending time on my 
                             <a href="https://onewheel.com/" rel="noopener" target="_blank">OneWheel!</a> I also like to spend my free time 
                             playing video games but lately I have been replacing that problem-solving itch with coding. </strong></p>
                 </div>
@@ -100,8 +100,8 @@
                     <p><strong> While in the Peds ICU, I chose to receive additional, non-necessary training and became Pediatric Advanced Life Support 
                         (PALS) certified. I also took additional training as well as in Continuous Renal Replacement Therapy (CRRT) which is basically 
                         dialysis. I also precepted (or trained) nurses that were new or our ICU and passed along what I knew!</strong></p>
-                    <p><strong> My coding experiences right now are limited to HTML, CSS, and JavaScript. I intend to keep working on perfecting 
-                        these skills and am excited to start learning more languages, methods, and technologies soon!</strong></p>
+                    <p><strong> My coding experiences right now center around Vanilla JavaScript. I am currently working on learning Node.js, Express.js, and React.
+                        I intend to keep working on perfecting these skills and am excited to start learning more languages, methods, and technologies soon!</strong></p>
                 </div>          
             </div>
             <div class="col awards">
