--- a/skills.html
+++ b/skills.html
@@ -74,6 +74,13 @@
                 </p>
             </div>
         </a>
+        <a href="https://teamtreehouse.com/jakestgermain" class="big treehouse">
+            <span class="sprite" alt="Team Treehouse Logo"></span>
+            <div class="text">
+                <h2 class="head">Team Treehouse Courses</h2>
+                <p id="treehouseData">If you are seeing this text, the Team Treehouse public API may be unreachable. Click this section to go to the profile directly!</p>
+            </div>
+        </a>
         <a href="#" class="big blender">
             <span class="sprite" alt="Blender Logo"></span>
             <div class="text">
@@ -85,5 +92,6 @@
         </a>
     </main>
     <script src="js/menu.js"></script>
+    <script src="js/treehouseData.js"></script>
 </body>
 </html>
