Linked Blender Projects

--- a/skills.html
+++ b/skills.html
@@ -81,12 +81,13 @@
                 <p id="treehouseData">If you are seeing this text, the Team Treehouse public API may be unreachable. Click this section to go to the profile directly!</p>
             </div>
         </a>
-        <a href="#" class="big blender">
+        <a href="https://drive.google.com/drive/folders/1V7hX2t6ycGIBt7nWGERlfpceJ2lLdyY1?usp=sharing" class="big blender">
             <span class="sprite" alt="Blender Logo"></span>
             <div class="text">
                 <h2 class="head">Blender</h2>
                 <p>It’s a hobby! I started this as a stress relief in college and utilized it for event posters on campus as well as a couple of
-                    video projects for school. One day I hope to use the 3D Modeling experience in web, software, and game development! 
+                    video projects for school. Click on this section to see some of them. One day I hope to use the 3D Modeling experience in web,
+                    software, and game development! 
                 </p>
             </div>
         </a>
