--- a/skills.html
+++ b/skills.html
@@ -64,13 +64,22 @@
                 </p>
             </div>
         </a>
-        <a href="#" class="big dev">
+        <a href="#" class="big frontEnd">
             <span class="sprite" alt="Html5 and CSS Logo"></span>
             <div class="text">
                 <h2 class="head">Front End Web</br>Development</h2>
                 <p>I recently decided to work on transitioning to software and web development as a career. Through Code Louisville and Treehouse,
                     I have gained knowledge and experience in Front End Web Development. I intend to always be learning by soaking up as much knowledge
                     as my classes and mentors are able to share. I am still working to be the best developer that I can and hope to break into the tech industry soon! Stay tuned! 
+                </p>
+            </div>
+        </a>
+        <a href="#" class="big cSharp">
+            <span class="sprite" alt="Html5 and CSS Logo"></span>
+            <div class="text">
+                <h2 class="head">C#</h2>
+                <p>My second programming language! Thanks again to Code Louisville and Treehouse, I was able to learn C#. Not only did I learn another language but I was able to
+                    practice and build more of a foundation in Object Oriented Programming. 
                 </p>
             </div>
         </a>
