--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         </nav> 
     </div>
     <header role = “banner”>
-        <h1 class="headline brad">Contact Me</h1>
+        <h1 class="headline">Contact Me</h1>
         <p class="tagline">Wanna get in touch? Here are a couple of ways!</p>
     </header>
     <main role =”main”>
@@ -58,17 +58,17 @@
             <h2>Email Me</h2>
             <p>You can reach me here on my professional email account. Please be respectful! </p>
         </a>
-        <a class="contact resume" href="imgs/Jake_St.Germain_2020_Site.pdf">
+        <a class="contact resume" target="_blank" href="https://drive.google.com/file/d/1oTgpw-CbrPvcXfwaFURmpyRsGLjjSKMI/view?usp=sharing">
             <img src="imgs/document.png" alt="document icon" height="180px" width="180px">
             <h2>My Resume</h2>
             <p>Here is my current resume. This is my generic version and not tailored to a specific position or company. </p>
         </a>
-        <a class="contact linkedin" href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/">
+        <a class="contact linkedin" target="_blank" href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/">
             <div class="sprite" alt="Linkedin Logo"></div>
             <h2>LinkedIn</h2>
             <p>Here's another way to my LinkedIn. Feel free to send me a message or connection request!</p>
         </a>
-        <div class="contact random" onClick="randomlinks()">
+        <div class="contact random" target="_blank" onClick="randomlinks()">
             <img src="imgs/link.png" alt="link icon" height="180px" width="180px">
             <h2>Random Links!</h2>
             <p>Here's just something fun. Click the button below for a random link. ALL possible links are wholesome, educational, or charitable. None of
