long overdue life updates

--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
                 <img class="aboutMeBodyImg" src="imgs/meRN.JPG" alt="Jake">
                 <div class="text">
                     <h2 class="head">About Me</h2>
-                        <p><strong> Hi! I’m Jake St. Germain and I am an aspiring software developer. After nearly 5 years of being a Pediatric ICU Nurse, I
-                            decided to pursue a longtime goal of mine and learn how to code. I have always had a love for tech and shown an aptitude for
-                            learning quickly in the tech area. My time in the ICU has helped me to remain calm, cool, and collected under pressure and,
-                            ideally, I will start to contribute to the tech space soon! </strong></p>
+                        <p><strong> Hi! I’m Jake St. Germain and I am a software developer! After 5 years of being a Pediatric ICU Nurse, I
+                            decided to pursue the long term passion of mine and switch to tech. I have always had a love for it and have shown an aptitude for
+                            learning quickly in the tech area. My time in the ICU has helped me to remain calm, cool, and collected under pressure. </strong></p>
                         <p><strong> Random tidbits! Like the headline says, I am a cat enthusiast and have three of the fluffy nerds. I have built computers 
                             for myself and a few of my friends, and love spending time on my 
                             <a href="https://onewheel.com/" rel="noopener" target="_blank">OneWheel!</a> I also like to spend my free time 
-                            playing video games but lately I have been replacing that problem-solving itch with coding. </strong></p>
+                            playing video games and finding solutions to problems with side coding projects. </strong></p>
                 </div>
             </div>
             <div class="colsmall">
@@ -75,17 +74,16 @@
                         <p><strong> Starting with college, I attended the University of Louisville where I graduated with my Bachelors of Science in Nursing. My
                             overall GPA was a 3.7/4.0 and I found myself on the Dean’s List for 3 Semesters and as a Dean’s Scholar for 2 Semesters. This was all
                             while having two jobs for most of those semesters! While being a nurse I strove for additional training in Pediatric Advanced Life Support
-                            (PALS) as well as in PRISMA (Continuous Dialysis). Now time for coding! I started my dev career with Code Louisville through their front end course.
-                            This also gave me access to Team Treehouse where I continued to soak in as much development knowledge as I could.</strong></p>
+                            (PALS) as well as in PRISMA (Continuous Dialysis). Now time for coding! I started my dev career with Code Louisville through their frontend, JavaScript, 
+                            and C# courses. This also gave me access to Team Treehouse where I continued to soak in as much development knowledge as I could.</strong></p>
                     </div>            
                 </div>
                 <div class="col goals">
                     <div class="text">
                         <h2 class="head">Goals</h2>
-                        <p><strong> My first and foremost goal is to gain more experience in development. I hope to do as many sessions of Code Louisville as I 
-                            can and continue to work through Team Treehouse’s catalog of coding education. I also hope to start to work in the tech industry soon!
-                            My overall goal is to make software that, overall, helps people live better lives. I hope to utilize my experience in nursing and
-                            apply to wherever I end up!</strong></p>
+                        <p><strong> My first and foremost goal is to gain more experience in development. This certainly is a profession that requires one to
+                            be a life-long learner. Whether it is at a giant tech company or a little start-up, I strive the be the best dev that I can be.
+                            My hope is to make software that helps people live better lives. I also hope to utilize my experience in nursing</strong></p>
                     </div>
                 </div>
             </div>
@@ -100,8 +98,9 @@
                     <p><strong> While in the Peds ICU, I chose to receive additional, non-necessary training and became Pediatric Advanced Life Support 
                         (PALS) certified. I also took additional training as well as in Continuous Renal Replacement Therapy (CRRT) which is basically 
                         dialysis. I also precepted (or trained) nurses that were new or our ICU and passed along what I knew!</strong></p>
-                    <p><strong> My coding experiences right now center around Vanilla JavaScript. I am currently working on learning Node.js, Express.js, and React.
-                        I intend to keep working on perfecting these skills and am excited to start learning more languages, methods, and technologies soon!</strong></p>
+                    <p><strong> My coding experiences right now center around JavaScript and C#. I have expanded on these topics and am now working in ASP.NET and Angular.
+                        I have also learned and used SQL, Android Development, Node.js, and PowerShell.  I intend to keep working on perfecting these skills and
+                        am excited to start learning more languages, methods, and technologies!</strong></p>
                 </div>          
             </div>
             <div class="col awards">
